Fix overflow in sidebar

--- a/doc/assets/index.scss
+++ b/doc/assets/index.scss
@@ -86,13 +86,14 @@ header {
 
 .content {
   display: flex;
-  overflow-x: hidden;
-  overflow-y: auto;
+  height: 100%;
+  overflow: hidden;
 }
 
 .sidebar {
   padding: 2rem;
   flex-shrink: 0;
+  overflow-y: auto;
 
   @include small-width {
     overflow-x: hidden;
@@ -157,6 +158,7 @@ header {
 
 .page {
   width: 100%;
+  overflow-y: auto;
 
   @include small-width {
     width: 100vw;
@@ -181,7 +183,7 @@ header {
     align-items: center;
     justify-content: center;
     gap: 1rem;
-    height: 70%;
+    height: 50vh;
     flex-shrink: 0;
 
     > img {
